fetchBackgrounds function. fetchStudent now includes the Medical and
SEN flags.

The year_end scripts now iterates over all sites listed in
$CFG->feeders and calls the httpscripts/transfer_students.php which
responds with the xml for all Students in a yid who are
transfering. The transfer data per student includes all student
details plus all comments.


Version ClaSS-0.8.51 release (2008/07/11)
-----------------------------------------

Added a field 'code' to the guardian table for use for ID or fiscal
codes.

Allowed for the option of remote authentication in the httpscripts
when a session does not exist. Aimed at CURLing between ClaSS sites.

The enrolments matrix now makes a remote call to all sites listed in
$CFG->feeders and asks for a count of transfers.

Updated the import_student scripts' handling of saved file definitions.


Version ClaSS-0.8.50 release (2008/07/04)
-----------------------------------------

File import of csv mime-type fixed on windows.

Typo causing error in re-enrolment grid fixed.

Added dutch translation files; thanks go to Steve Boucque.

Bugfix to the handling of components when changing between classes -
sometimes a pid was selected which didn't exist for the class.

Concept of admin permissions groups added and corresponding logbook
function get_admin_perm(). Allows for super-administrator permissions to
be shared out between different users and at the same time restricted to
areas such as budgets, academic, or pastoral.

The report_assessments page now filters out empty columns from the
display table.

With the profile selected in the MarkBook an automatic column is added
giving the overall performance, averaging or tallying, the profile's
assessments for the selected component.

Printing address labels added to the enrolments' lists.

Have fixed the logic of the get_budget_projected() balance claculation
so cancelled orders are excluded.

Cancel is now Back in lang/en, so you could say Back is back!!!
