@@ -24,7 +24,7 @@ function list_yeargroups($secid='%'){
 	$yeargroups=array();
 	$d_y=mysql_query("SELECT DISTINCT * FROM yeargroup WHERE
 					section_id='%' OR section_id LIKE '$secid' 
-					ORDER BY section_id,sequence;");
+					ORDER BY section_id, sequence;");
 	while($y=mysql_fetch_array($d_y,MYSQL_ASSOC)){
 		$yeargroups[]=$y;
 		}
